--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <h1>Привет, это курс</h1>
+		<h2>Привет, егор</h2>
         <script src="js/app.js"></script>
     </body>
 </html>
