--- a/JS_step_1/index.html
+++ b/JS_step_1/index.html
@@ -10,6 +10,6 @@
     </head>
     <body>
         <h1>Привет, это курс</h1>
-        <script src="js/app.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
